update signin.html & index.html
format index.html

--- a/styles.css
+++ b/styles.css
@@ -555,6 +555,7 @@ select:focus-visible {
 article[class="sign-in"] {
     background-color: var(--color-secondary);
     line-height: 1.2;
+    padding: 2rem 0;
 }
 
 article[class="sign-in"] form {
