--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,13 @@ a:hover {
 }
 
 .logo1 {
-    font-size: 1.5rem;
-    display: block;
+    display: flex;
+    align-self: center;
+    cursor: pointer;
+}
+
+.logo1 svg:hover {
+    fill: var(--color-tertiary);
 }
 
 .btn {
@@ -109,8 +114,8 @@ a:hover {
 
 html,
 body {
-    width: auto;
-    overflow-x: hidden;
+    width: auto !important;
+    overflow-x: hidden !important;
 }
 
 /* END OF GENERAL STYLING */
@@ -136,12 +141,13 @@ button[id="open-sidebar"] {
 }
 
 bento-sidebar[id="sidebar1"] {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-secondary);
 }
 
 bento-sidebar[id="sidebar1"] li {
     padding: 1rem;
     cursor: pointer;
+    margin: 1rem 0;
 }
 
 .bento li a {
@@ -673,9 +679,12 @@ input[class="sign_in"] {
     }
 
     .logo2 {
-        font-size: 1.5rem;
-        display: block;
-        position: relative;
+        display: flex;
+        align-self: center;
+    }
+
+    .logo2 svg:hover {
+        fill: var(--color-tertiary);
     }
 
     header {
@@ -689,13 +698,14 @@ input[class="sign_in"] {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 1rem;
+        padding: 5px 15px;
     }
 
     .nav-links {
         display: flex;
         justify-content: space-between;
         gap: 2rem;
+        margin-right: 1rem;
     }
 
     /* END OF DESKTOP NAVBAR */
