--- a/styles.css
+++ b/styles.css
@@ -145,8 +145,7 @@ bento-sidebar[id="sidebar1"] {
 }
 
 bento-sidebar[id="sidebar1"] li {
-    padding: 0 1rem;
-    margin: 1rem 0;
+    padding: 1.5rem;
     cursor: pointer;
 }
 
