--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --color-tertiary: #D4FAE3;
     --color-alternate: #94949C;
     --color-white: #ffffff;
-    --transition: 0.3s ease;
+    --transition: all 0.3s ease;
     --container-medium: 86%;
     --container-large: 90%;
 }
@@ -240,7 +240,8 @@ section[class="credit_section"] {
 }
 
 section[class="credit_section"] h3,
-p, ul {
+p,
+ul {
     color: var(--color-primary);
 }
 
@@ -273,13 +274,14 @@ figcaption svg {
 figcaption {
     padding-top: 2rem;
 }
+
 .creditcard figcaption {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.cards >li {
+.cards>li {
     list-style: inside;
 }
 
@@ -762,3 +764,9 @@ input[class="sign_in"] {
 }
 
 /* END OF DESKTOP MEDIA QUERIES */
+
+@media (prefers-reduced-motion: reduce) {
+    .btn {
+        transition: none;
+    }
+}
